--- a/lab_4/pubspec.yaml
+++ b/lab_4/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.12.0
   firebase_auth: ^3.3.8
+  cloud_firestore: ^3.1.9
+  google_fonts: ^2.3.0
+  provider: ^6.0.2
 
 dev_dependencies:
   flutter_test:
